@@ -20,7 +20,7 @@ following environments:
 
 <UL>
 
-	<LI>AIX 4.3.3 or higher
+	<LI>AIX 4.3 or higher
 
 	<LI>Compaq Tru64 UNIX 4.0 or higher
 
@@ -30,11 +30,9 @@ following environments:
 
 	<LI>Linux 2.0 or higher
 
-	<LI>Microsoft Windows 95/98/Me
+	<LI>MacOS X 10.1 or higher
 
-	<LI>Microsoft Windows NT 4.0
-
-	<LI>Microsoft Windows 2000
+	<LI>Microsoft Windows 95/98/Me/NT 4.0/2000/XP
 
 	<LI>Solaris 2.5 or higher
 
