@@ -113,6 +113,7 @@ sub topdf {
 }
 </PRE></UL>
 
+<!-- NEED 7in -->
 <H2>Calling HTMLDOC from PHP</H2>
 
 <P>PHP is quickly becoming the most popular server-side
