@@ -125,76 +125,93 @@ control the current media options:</P>
 
 <DL>
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- FOOTER LEFT "foo" --&gt;</CODE>
 	<DD>Sets the left footer text; the test is applied to
 	the current page if empty, or the next page otherwise.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- FOOTER CENTER "foo" --&gt;</CODE>
 	<DD>Sets the center footer text; the test is applied to
 	the current page if empty, or the next page otherwise.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- FOOTER RIGHT "foo" --&gt;</CODE>
 	<DD>Sets the right footer text; the test is applied to
 	the current page if empty, or the next page otherwise.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- HALF PAGE --&gt;</CODE>
 	<DD>Break to the next half page.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- HEADER LEFT "foo" --&gt;</CODE>
 	<DD>Sets the left header text; the test is applied to
 	the current page if empty, or the next page otherwise.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- HEADER CENTER "foo" --&gt;</CODE>
 	<DD>Sets the center header text; the test is applied to
 	the current page if empty, or the next page otherwise.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- HEADER RIGHT "foo" --&gt;</CODE>
 	<DD>Sets the right header text; the test is applied to
 	the current page if empty, or the next page otherwise.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- MEDIA BOTTOM nnn --&gt;</CODE>
 	<DD>Sets the bottom margin of the page. The "nnn" string can
 	be any standard measurement value, e.g. 0.5in, 36, 12mm, etc.
 	Breaks to a new page if the current page is already marked.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- MEDIA COLOR "foo" --&gt;</CODE>
 	<DD>Sets the media color attribute for the page. The
 	"foo" string is any color name that is supported by the
 	printer, e.g. "Blue", "White", etc.  Breaks to a new
 	page or sheet if the current page is already marked.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- MEDIA DUPLEX NO --&gt;</CODE>
 	<DD>Chooses single-sided printing for the page; breaks to a
 	new page or sheet if the current page is already marked.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- MEDIA DUPLEX YES --&gt;</CODE>
 	<DD>Chooses double-sided printing for the page; breaks to a
 	new sheet if the current page is already marked.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- MEDIA LANDSCAPE NO --&gt;</CODE>
 	<DD>Chooses portrait orientation for the page; breaks to a
 	new page if the current page is already marked.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- MEDIA LANDSCAPE YES --&gt;</CODE>
 	<DD>Chooses landscape orientation for the page; breaks to a
 	new page if the current page is already marked.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- MEDIA LEFT nnn --&gt;</CODE>
 	<DD>Sets the left margin of the page. The "nnn" string can
 	be any standard measurement value, e.g. 0.5in, 36, 12mm, etc.
 	Breaks to a new page if the current page is already marked.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- MEDIA POSITION nnn --&gt;</CODE>
 	<DD>Sets the media position attribute (input tray) for
 	the page. The "nnn" string is an integer that usually
 	specifies the tray number. Breaks to a new page or sheet
 	if the current page is already marked.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- MEDIA RIGHT nnn --&gt;</CODE>
 	<DD>Sets the right margin of the page. The "nnn" string can
 	be any standard measurement value, e.g. 0.5in, 36, 12mm, etc.
 	Breaks to a new page if the current page is already marked.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- MEDIA SIZE foo --&gt;</CODE>
 	<DD>Sets the media size to the specified size. The "foo"
 	string can be "Letter", "Legal", "Universal", or "A4"
@@ -202,17 +219,20 @@ control the current media options:</P>
 	sizes, e.g. "8.5x11in"; breaks to a new page or sheet if
 	the current page is already marked.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- MEDIA TOP nnn --&gt;</CODE>
 	<DD>Sets the top margin of the page. The "nnn" string can
 	be any standard measurement value, e.g. 0.5in, 36, 12mm, etc.
 	Breaks to a new page if the current page is already marked.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- MEDIA TYPE "foo" --&gt;</CODE>
 	<DD>Sets the media type attribute for the page. The
 	"foo" string is any type name that is supported by the
 	printer, e.g. "Plain", "Glossy", etc.  Breaks to a new
 	page or sheet if the current page is already marked.
 
+	<!-- NEED 2in -->
 	<DT><CODE>&lt;!-- NEED length --&gt;</CODE>
 	<DD>Break if there is less than <CODE>length</CODE>
 	units left on the current page. The <CODE>length</CODE>
@@ -220,12 +240,15 @@ control the current media options:</P>
 	<CODE>in</CODE>, <CODE>mm</CODE>, or <CODE>cm</CODE> to
 	convert from the corresponding units.
 
+	<!-- NEED 1in -->
 	<DT><CODE>&lt;!-- NEW PAGE --&gt;</CODE>
 	<DD>Break to the next page.
 
+	<!-- NEED 1in -->
 	<DT><CODE>&lt;!-- NEW SHEET --&gt;</CODE>
 	<DD>Break to the next sheet.
 
+	<!-- NEED 1in -->
 	<DT><CODE>&lt;!-- PAGE BREAK --&gt;</CODE>
 	<DD>Break to the next page.
 
@@ -241,12 +264,15 @@ dollar sign (<CODE>$</CODE>):</P>
 
 <DL>
 
+	<!-- NEED 1in -->
 	<DT><CODE>$$</CODE>
 	<DD>Inserts a single dollar sign in the header.
 
+	<!-- NEED 1in -->
 	<DT><CODE>CHAPTER</CODE>
 	<DD>Inserts the current chapter heading.
 
+	<!-- NEED 2in -->
 	<DT><CODE>$CHAPTERPAGE</CODE>
 	<DT><CODE>$CHAPTERPAGE(format)</CODE>
 	<DD>Inserts the current page number within a chapter or
@@ -255,6 +281,7 @@ dollar sign (<CODE>$</CODE>):</P>
 	uppercase roman numerals, a = lowercase ascii, A =
 	uppercase ascii) for the page numbers.
 
+	<!-- NEED 2in -->
 	<DT><CODE>$CHAPTERPAGES</CODE>
 	<DT><CODE>$CHAPTERPAGES(format)</CODE>
 	<DD>Inserts the total page count within a chapter or
@@ -263,12 +290,20 @@ dollar sign (<CODE>$</CODE>):</P>
 	uppercase roman numerals, a = lowercase ascii, A =
 	uppercase ascii) for the page count.
 
+	<!-- NEED 1in -->
 	<DT><CODE>$DATE</CODE>
 	<DD>Inserts the current date.
 
+	<!-- NEED 1in -->
 	<DT><CODE>$HEADING</CODE>
 	<DD>Inserts the current heading.
 
+	<!-- NEED 1in -->
+	<DT><CODE>$LOGOIMAGE</CODE>
+	<DD>Inserts the logo image; all other text in the string
+	will be ignored.
+
+	<!-- NEED 2in -->
 	<DT><CODE>$PAGE</CODE>
 	<DT><CODE>$PAGE(format)</CODE>
 	<DD>Inserts the current page number. When a format is
@@ -277,6 +312,7 @@ dollar sign (<CODE>$</CODE>):</P>
 	a = lowercase ascii, A = uppercase ascii) for the page
 	numbers.
 
+	<!-- NEED 2in -->
 	<DT><CODE>$PAGES</CODE>
 	<DT><CODE>$PAGES(format)</CODE>
 	<DD>Inserts the total page count. When a format is
@@ -285,9 +321,11 @@ dollar sign (<CODE>$</CODE>):</P>
 	a = lowercase ascii, A = uppercase ascii) for the page
 	count.
 
+	<!-- NEED 1in -->
 	<DT><CODE>$TIME</CODE>
 	<DD>Inserts the current time.
 
+	<!-- NEED 1in -->
 	<DT><CODE>$TITLE</CODE>
 	<DD>Inserts the document title.
 
