@@ -199,6 +199,7 @@ very well on indexed images and text.
 The <VAR>JPEG Quality</VAR> slider controls the quality level used
 when writing continuous-tone images with JPEG compression.
 
+<!-- NEW PAGE -->
 <P ALIGN=CENTER><IMG SRC="htmldoc-fig73.png">
 <BR>Figure 7-3 - The Page Tab</P>
 
