@@ -564,6 +564,7 @@ the PDF viewer. The <CODE>layout</CODE> parameter can be one of the following:
 
 <P>This option is only available when generating PDF files.
 
+<!-- NEED 4in -->
 <H3>--pagemode mode</H3>
 
 The <CODE>--pagemode</CODE> option specifies the initial viewing mode in the
