@@ -2,7 +2,7 @@
 <HEAD>
 	<META NAME="author" CONTENT="Easy Software Products">
 	<META NAME="copyright" CONTENT="Copyright 1997-2001, See the GNU General Public License for Details.">
-	<META NAME="docnumber" CONTENT="ESP-003-20011114">
+	<META NAME="docnumber" CONTENT="ESP-003-20011120">
 	<TITLE>HTMLDOC 1.8.17 Software Users Manual</TITLE>
 </HEAD>
 <BODY>
@@ -109,9 +109,11 @@ is the service mark property of CompuServe Incorporated.
 
 <P>Linux is a registered trademark of Linus Torvalds.
 
+<P>MacOS is a registered trademark of Apple Computer, Inc.
+
 <P>Microsoft, Windows, Windows 95, Windows 98, Windows Me,
-Windows 2000, and Windows NT are registered trademarks of
-Microsoft Corporation.
+Windows 2000, Windows NT, and Windows XP are registered
+trademarks of Microsoft Corporation.
 
 <P>Red Hat and RPM are registered trademarks of Red Hat, Inc.
 
